remove jwt unnecessary access
