# src/features/comments/docs/comments.swagger.yml
@@ -14,8 +14,6 @@ paths:
             summary: Get comment by id
             tags: [Comments]
             operationId: getCommentById
-            security:
-                - BearerAuth: []
             parameters:
                 - $ref: '#/components/parameters/IdPathParam'
             responses:
@@ -31,8 +29,6 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/ErrorResponse'
-                '401':
-                    description: Unauthorized
                 '404':
                     description: Comment not found
         put:
